# kubevirt

./: .travis.yml  0001-check-windows.patch  0001-tests-windows-Add-Subdomain-test.patch  0001-virt-launcher-Propogate-subdomain-name-to-VM.patch  1.diff  1.txt  1.txtn:q  2  2.diff  486.diff  5029.patch  563.patch  5899.diff  6228.patch  6230.patch  BUILD.bazel  WORKSPACE  alpine.yaml  auto_hack.diff  backup_fqdn.patch  bad_vm.yaml  bad_vm2.yaml  bak_test_vm.yaml  before.txt  bla.yaml  cirros.yaml  cirros_from_test.yaml.bak  collect_daemon.sh  components.yaml  create_bridges.sh  create_sriov_vm.sh  create_vms.sh  debug.diff  delete_bridges.sh  e2e.sh  env18.txt  env19.txt  env19cnao.txt  env20.txt  env21.txt  (+62 more)
_kubevirtci/cluster-provision/gocli/cmd/: BUILD.bazel  provision.go  rm.go  run.go  scp.go  ssh.go
_kubevirtci/cluster-provision/gocli/cmd/utils/: BUILD.bazel
_kubevirtci/cluster-provision/gocli/containers/: BUILD.bazel  dnsmasq.go
_kubevirtci/cluster-provision/gocli/docker/: BUILD.bazel
_kubevirtci/cluster-provision/gocli/images/: BUILD.bazel
_kubevirtci/cluster-up/cluster/kind-k8s-sriov-1.17.0/certcreator/: BUILD.bazel
_kubevirtci/cluster-up/cluster/kind-k8s-sriov-1.17.0/certcreator/certlib/: BUILD.bazel
_kubevirtci/hack/: check.sh
_kubevirtci/pack8s/: BUILD.bazel
_kubevirtci/pack8s/cmd/: BUILD.bazel
_kubevirtci/pack8s/cmd/cmdutil/: BUILD.bazel
_kubevirtci/pack8s/internal/pkg/images/: BUILD.bazel
_kubevirtci/pack8s/internal/pkg/ledger/: BUILD.bazel
_kubevirtci/pack8s/internal/pkg/mounts/: BUILD.bazel
_kubevirtci/pack8s/internal/pkg/podman/: BUILD.bazel
_kubevirtci/pack8s/internal/pkg/ports/: BUILD.bazel
_kubevirtci/pack8s/iopodman/: BUILD.bazel
_kubevirtci/pack8s/pkg/varlinkapi/virtwriter/: BUILD.bazel  virtwriter.go
api/openapi-spec/: swagger.json
automation/: test.sh
cmd/cniplugins/passt-binding/: passt-binding-ds.yaml
cmd/cniplugins/passt-binding/cmd/: BUILD.bazel
cmd/sidecars/network-passt-binding/domain/: configurator_test.go
cmd/virt-launcher/: virt-launcher.go
cmd/virt-launcher-monitor/: virt-launcher-monitor.go
cmd/virt-tail/: main.go
hack/: cluster-build.sh  cluster-clean.sh  cluster-deploy.sh  functests.sh  generate.sh
hack/linter/: .golangci.yml
pkg/cloud-init/: cloud-init.go
pkg/container-disk/: container-disk_test.go
pkg/dra/: utils.go
pkg/dra/admitter/: dra_admitter.go  dra_admitter_test.go
pkg/hooks/: manager.go  manager_test.go
pkg/host-disk/: host-disk_test.go
pkg/libvmi/: network.go  vmi.go
pkg/network/dhcp/: bridge.go  configurator.go  masquerade.go
pkg/network/driver/: common.go
pkg/network/setup/: BUILD.bazel  netstat.go  netstat_test.go  podnic.go
pkg/network/vmispec/: interface.go  network.go  network_test.go
pkg/util/: util.go
pkg/util/net/dns/: resolveconf.go  (+1 more)
pkg/virt-config/: feature-gates.go
pkg/virt-config/featuregate/: active.go
pkg/virt-controller/ipamclaims/: BUILD.bazel  ipamclaims.go  ipamclaims_test.go
pkg/virt-controller/ipamclaims/libipam/: BUILD.bazel  libipam.go  libipam_test.go
pkg/virt-controller/network/: BUILD.bazel  hotplug.go  hotplug_test.go  ipamclaims.go  ipamclaims_test.go  multus_annotations.go  multus_annotations_test.go  network_suite_test.go  render.go  render_test.go
pkg/virt-controller/services/: BUILD.bazel  renderresources.go  renderresources_test.go  template.go  template_test.go
pkg/virt-controller/watch/: BUILD.bazel  application.go  application_test.go  migration.go  migration_test.go  pool_test.go  vm.go  vmi.go  vmi_test.go
pkg/virt-handler/: non-root.go  vm.go  vm_test.go
pkg/virt-handler/cache/: cache.go  cache_test.go
pkg/virt-handler/migration-proxy/: BUILD.bazel  migration-proxy.go
pkg/virt-handler/notify-server/: server.go
pkg/virt-launcher/notify-client/: client.go
pkg/virt-launcher/virtwrap/: BUILD.bazel  generated_mock_manager.go  manager.go  manager_test.go
temp/: create.sh  test_vm10.yaml  test_vm100.yaml  test_vm1000.yaml  test_vm101.yaml  test_vm102.yaml  test_vm103.yaml  test_vm104.yaml  test_vm105.yaml  test_vm106.yaml  test_vm107.yaml  test_vm108.yaml  test_vm109.yaml  test_vm11.yaml  test_vm110.yaml  test_vm111.yaml  test_vm112.yaml  test_vm113.yaml  test_vm114.yaml  test_vm115.yaml  test_vm116.yaml  test_vm117.yaml  test_vm118.yaml  test_vm119.yaml  test_vm12.yaml  test_vm120.yaml  test_vm121.yaml  test_vm122.yaml  test_vm123.yaml  test_vm124.yaml  test_vm125.yaml  test_vm126.yaml  test_vm127.yaml  test_vm128.yaml  test_vm129.yaml  test_vm13.yaml  test_vm130.yaml  test_vm131.yaml  test_vm132.yaml  test_vm133.yaml  (+960 more)
tests/: BUILD.bazel  console_test.go  container_disk_test.go  expose_test.go  infra_test.go  kubectl_test.go  mdev_configuration_allocation_test.go  migration_test.go  networkpolicy_test.go  nonroot_test.go  operator_test.go  pool_test.go  portforward_test.go  probes_test.go  storage_test.go  subresource_api_test.go  swap_test.go  tests_suite_test.go  utils.go  virt_control_plane_test.go  vm_state_test.go  vmi_cloudinit_test.go  vmi_configuration_test.go  vmi_headless_test.go  vmi_hostdev_test.go  vmi_lifecycle_test.go  vmi_multiqueue_test.go  vmi_multus_test.go  vmi_networking_test.go  vmi_slirp_interface_test.go  vmi_vsock_test.go  windows_test.go
tests/console/: console.go  login.go
tests/decorators/: decorators.go
tests/libnet/: resourceclaim.go
tests/libnet/cloudinit/: cloudinit.go
tests/libnet/service/: service.go
tests/libvmi/: factory.go  network.go
tests/migration/: migration.go
tests/monitoring/: monitoring.go  vm_monitoring.go
tests/network/: BUILD.bazel  expose.go  hotplug.go  probes.go  services.go  sriov.go  sriov_dra.go  vmi_infosource.go  vmi_istio.go  vmi_lifecycle.go  vmi_multus.go  vmi_multus_test.go  vmi_networking.go  vmi_networking_test.go  vmi_slirp_interface.go  vmi_slirp_interface_test.go  vmi_subdomain.go
tests/operator/: operator.go
tests/reporter/: kubernetes.go  outputenricher.go
tests/storage/: restore.go  snapshot.go  storage.go
tests/vmlogchecker/: BUILD.bazel  checker.go
tools/manifest-templator/: manifest-templator.go
(+58 files in other folders)
