load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "kubevirt.io/kubevirt/_kubevirtci/pack8s",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "pack8s",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
