load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["dnsmasq.go"],
    importpath = "kubevirt.io/kubevirt/_kubevirtci/cluster-provision/gocli/containers",
    visibility = ["//visibility:public"],
    deps = ["//vendor/golang.org/x/net/context:go_default_library"],
)
