load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "run_helpers.go",
        "util.go",
    ],
    importpath = "kubevirt.io/kubevirt/_kubevirtci/pack8s/cmd/cmdutil",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/spf13/cobra:go_default_library"],
)
