load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["ledger.go"],
    importpath = "kubevirt.io/kubevirt/_kubevirtci/pack8s/internal/pkg/ledger",
    visibility = ["//_kubevirtci/pack8s:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "ledger_suite_test.go",
        "ledger_test.go",
    ],
    deps = [
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
